# golfcrash

./: .gitignore  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vercel.json
apps/math-sdk/: index.json  pyproject.toml
apps/math-sdk/scripts/: casino_profit_report_uk_20m.py  generate_publish_files.py  simulate_distribution_20m.py
apps/math-sdk/src/golf_crash_math/: cli.py  events.py  rng.py  round.py  rtp.py  verify_round.py
apps/math-sdk/tests/: test_rng.py  test_round.py
games/golf-crash/: MVP_GAPS_IMPLEMENTATION_ORDER.md  package.json  svelte.config.js  vercel.json  vite.config.ts
games/golf-crash/scripts/: prepare-stake-release.js
games/golf-crash/src/: app.html
games/golf-crash/src/lib/: i18n.ts  runtime.ts
games/golf-crash/src/lib/config/: characters.ts  worlds.ts
games/golf-crash/src/lib/dev/: terminalLogger.ts
games/golf-crash/src/lib/game/: bootstrap.ts  flight-physics.ts  map.ts  math.ts  round.ts
games/golf-crash/src/lib/game/components/: ambient-builder.ts  background-builder.ts  camera-controller.ts  cloud-backdrop.ts  (+2 more)
games/golf-crash/src/lib/network/: StakeSession.ts
games/golf-crash/src/lib/services/: provablyFair.ts  rgs.ts
games/golf-crash/src/lib/stores/: game.svelte.ts
games/golf-crash/src/lib/ui/: BetPanel.svelte  HUDOverlay.svelte  PrimaryActionButton.svelte
games/golf-crash/src/routes/: +layout.svelte  +page.svelte
games/golf-crash/stake-release/golf-crash-game/0.0.1/: index.html
games/golf-crash/stake-release/golfcrash/v2/: index.html
games/golf-crash/stake-release/golfcrash/v4/: index.html
(+208 files in other folders)
